Fix z-index and contrast issue
The tabs borders didn't overlap the schedule container even though it
had a z-index set. By adding "position: relative" to the container
that fixed it.

Also the constrast was a bit low for inactive tabs.

--- a/rodatraden/static/rodatraden/rodatraden.css
+++ b/rodatraden/static/rodatraden/rodatraden.css
@@ -421,7 +421,7 @@ a:not(.default):hover{
 }
 
 .profile-tab:not(.selected) {
-  background-color: hsl(0, 0%, 95%);
+  background-color: hsl(0, 0%, 93%);
 }
 
 /* Round of the outer edges so the tabs look more connected. */
@@ -444,6 +444,9 @@ a:not(.default):hover{
 .profile-block-schedule-container {
   /* Make sure the block schedule doesn't shrink. */
   width: 100%;
+
+  /* Without position relative the z-index for the tabs doesn't work. */
+  position: relative;
 
   border: 1px solid var(--border-color);
   border-radius: 0.5rem;
